# Project_3_Search_for_vacancies_in_DB

./: README.md  main.py  pyproject.toml
src/: configuration.py  create_db.py  dbmanager.py  interaction_hh.py
